--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,16 @@ img {
   display: block;
   max-width: 100%;
 }
+
+button[type='button'] {
+  padding: 20px 40px;
+  font-size: 18px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  margin-right: 10px;
+}
+button[type='button']:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
